tests/solver/snapshots/solver__constrains_reverse_unsat.snap
---
source: tests/solver/main.rs
expression: error
---
The following packages are incompatible
├─ x * can be installed with any of the following options:
│  └─ x 1 would require
│     └─ b >=1, <2, which can be installed with any of the following options:
│        └─ b 1
└─ a * cannot be installed because there are no viable options:
   └─ a 1 would constrain
      └─ b >=2, <100, which conflicts with any installable versions previously reported
