tests/solver/snapshots/solver__unsat_applies_graph_compression.snap
---
source: tests/solver/main.rs
expression: error
---
The following packages are incompatible
├─ (A) c >=101, <104 can be installed with any of the following options:
│  └─ c 101 | 103
└─ a * cannot be installed because there are no viable options:
   └─ a 9 | 10 would require
      └─ b *, which cannot be installed because there are no viable options:
         └─ b 42 | 100 would require
            └─ c >=0, <100, which cannot be installed because there are no viable options:
               └─ c 99, which conflicts with c >=101, <104 (A)
