tests/solver/snapshots/solver__unsat_incompatible_root_requirements.snap
---
source: tests/solver/main.rs
expression: error
---
The following packages are incompatible
├─ (A) a >=5, <10 can be installed with any of the following options:
│  └─ a 5
└─ a >=0, <4 cannot be installed because there are no viable options:
   └─ a 2, which conflicts with a >=5, <10 (A)
